--- a/src/index.html
+++ b/src/index.html
@@ -9,6 +9,8 @@
     <base href="/">
 </head>
 <body>
-    <my-app>Loading...</my-app>
+    <my-app>
+        <div class="loading">Loading...</div>
+    </my-app>
 </body>
 </html>
