new bundling system without HMR

--- a/src/index.html
+++ b/src/index.html
@@ -1,16 +1,14 @@
-<!doctype html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport"
-          content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Angular2</title>
+<!DOCTYPE html>
+<html>
+  <head>
     <base href="/">
-</head>
-<body>
+    <title>Angular With Webpack</title>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+  </head>
+  <body>
     <my-app>
-        <div class="loading">Loading...</div>
+      <div class="loading">Loading...</div>
     </my-app>
-</body>
+  </body>
 </html>
